--- a/CPP_MODULE_00/ex01/Makefile
+++ b/CPP_MODULE_00/ex01/Makefile
@@ -1,10 +1,10 @@
-SRC = Megaphone.cpp
+SRC = main.cpp phonebook.cpp contact.cpp
 
 OBJ = ${SRC:.cpp=.o}
 
 NAME = MyAwesomePhonebook
 
-CC = g++
+CC = c++
 
 CFLAGS = -Wall -Werror -Wextra -std=c++98
 
@@ -22,5 +22,3 @@ fclean : clean
 		${RM} ${NAME}
  
 re : fclean all
-
-.phony : all fclean clean re 
