BraiiiiiiinnnzzzZ && Moar brainz! are done git add *

--- a/CPP_MODULE_00/ex01/Makefile
+++ b/CPP_MODULE_00/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aaljaber <aaljaber@student.42abudhabi.ae>  +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/02 20:26:44 by aaljaber          #+#    #+#              #
+#    Updated: 2022/10/02 20:26:46 by aaljaber         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRC = main.cpp phonebook.cpp contact.cpp
 
 OBJ = ${SRC:.cpp=.o}
