--- a/CPP_MODULE_06/ex02/Makefile
+++ b/CPP_MODULE_06/ex02/Makefile
@@ -3,14 +3,14 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: aaljaber <aaljaber@student.42abudhabi.ae>  +#+  +:+       +#+         #
+#    By: aaljaber <aaljaber@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/15 02:18:41 by aaljaber          #+#    #+#              #
-#    Updated: 2022/10/15 02:18:51 by aaljaber         ###   ########.fr        #
+#    Updated: 2022/10/18 07:37:53 by aaljaber         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = main.cpp
+SRC = main.cpp Base.cpp A.cpp B.cpp C.cpp 
 
 OBJ = ${SRC:.cpp=.o}
 
