TOO LATE TO NOTICE !\|

--- a/CPP_MODULE_01/ex00/Makefile
+++ b/CPP_MODULE_01/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: aaljaber <aaljaber@student.42abudhabi.ae>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/02 20:27:24 by aaljaber          #+#    #+#              #
-#    Updated: 2022/10/02 20:59:52 by aaljaber         ###   ########.fr        #
+#    Updated: 2022/10/20 07:21:52 by aaljaber         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,16 +16,16 @@ OBJ = ${SRC:.cpp=.o}
 
 NAME = BraiiiiiiinnnzzzZ
 
-CC = c++
+CXX = c++
 
-CFLAGS = -Wall -Werror -Wextra -std=c++98
-
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98
+	
 RM = rm -rf
 
 all : ${NAME}
 
 ${NAME} : ${OBJ}
-		${CC} ${CFLAGS} ${OBJ} -o ${NAME}
+		${CXX} ${CXXFLAGS} ${OBJ} -o ${NAME}
 
 clean : 
 		${RM} ${OBJ}
